--- a/index.html
+++ b/index.html
@@ -96,10 +96,10 @@
   <style>@view-transition { navigation: auto; }</style>
   <script src="/_sdk/data_sdk.js" type="text/javascript"></script>
  </head>
- <body class="h-full font-body" style="background-color: #EFEADF;">
+ <body class="h-full font-body bg-white">
   <div id="app-wrapper" class="w-full h-full overflow-auto"><!-- Hero Section -->
    <section id="hero-section" class="min-h-screen relative flex items-center justify-center leaf-pattern">
-    <div class="absolute inset-0 bg-gradient-to-br from-[#EFEADF] via-[#EFEADF]/30 to-[#EFEADF]"></div><!-- Decorative Elements -->
+    <div class="absolute inset-0 bg-gradient-to-br from-white via-[#72989B]/5 to-white"></div><!-- Decorative Elements -->
     <div class="absolute top-20 left-10 opacity-20 animate-float">
      <svg width="60" height="60" viewbox="0 0 60 60" fill="none"><path d="M30 5C30 5 45 20 45 35C45 50 30 55 30 55C30 55 15 50 15 35C15 20 30 5 30 5Z" stroke="#72989B" stroke-width="2" /> <path d="M30 15V45" stroke="#72989B" stroke-width="1.5" /> <path d="M30 25L22 32" stroke="#72989B" stroke-width="1" /> <path d="M30 32L38 39" stroke="#72989B" stroke-width="1" />
      </svg>
@@ -112,7 +112,7 @@
      <div class="mb-8 opacity-0 animate-fade-in-up">
       <div class="w-40 h-40 mx-auto rounded-full bg-gradient-to-br from-[#72989B] to-[#3C5F68] p-1 shadow-2xl shadow-[#72989B]/20">
        <!-- Foto de perfil da Ana -->
-       <div class="w-full h-full rounded-full bg-[#EFEADF] flex items-center justify-center overflow-hidden">
+       <div class="w-full h-full rounded-full bg-white flex items-center justify-center overflow-hidden">
         <img 
           src="https://drive.google.com/thumbnail?id=1SH21J_mG95Q5C6WeLL6Iv8K-IvBIhk2Z&sz=w400" 
           alt="Ana Gabriela Fonseca - Nutricionista"
@@ -137,7 +137,7 @@
      </div>
     </div>
    </section><!-- About Section -->
-   <section id="about-section" class="py-24 px-6" style="background-color: #EFEADF;">
+   <section id="about-section" class="py-24 px-6 bg-white">
     <div class="max-w-6xl mx-auto">
      <div class="grid md:grid-cols-2 gap-16 items-center">
       <div>
@@ -174,14 +174,14 @@
      </div>
     </div>
    </section><!-- Services Section -->
-   <section id="services-section" class="py-24 px-6 bg-gradient-to-b from-[#EFEADF] to-[#EFEADF]">
+   <section id="services-section" class="py-24 px-6 bg-gradient-to-b from-white to-white">
     <div class="max-w-6xl mx-auto">
      <div class="text-center mb-16">
        <span class="text-[#72989B] font-medium tracking-[0.2em] uppercase text-sm">Especialidades</span>
        <h2 id="services-title" class="font-display text-5xl md:text-6xl text-[#3C5F68] mt-2">Áreas de Atuação</h2>
      </div>
      <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
-      <div class="card-hover bg-white p-8 rounded-3xl shadow-lg shadow-[#3C5F68]/10 border border-[#EFEADF]">
+      <div class="card-hover bg-white p-8 rounded-3xl shadow-lg shadow-[#3C5F68]/10 border border-gray-100">
        <div class="w-16 h-16 bg-[#72989B]/10 rounded-2xl flex items-center justify-center mb-6">
         <svg class="w-8 h-8 text-[#3C5F68]" fill="none" stroke="currentColor" viewbox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M12 6v6m0 0v6m0-6h6m-6 0H6" />
         </svg>
@@ -189,7 +189,7 @@
        <h3 class="font-display text-2xl text-[#3C5F68] mb-3">Reeducação Alimentar</h3>
        <p class="text-[#3C5F68]/80 leading-relaxed">Aprenda a fazer escolhas alimentares conscientes e sustentáveis para uma vida mais saudável.</p>
       </div>
-      <div class="card-hover bg-white p-8 rounded-3xl shadow-lg shadow-[#3C5F68]/10 border border-[#EFEADF]">
+      <div class="card-hover bg-white p-8 rounded-3xl shadow-lg shadow-[#3C5F68]/10 border border-gray-100">
        <div class="w-16 h-16 bg-[#72989B]/10 rounded-2xl flex items-center justify-center mb-6">
         <svg class="w-8 h-8 text-[#3C5F68]" fill="none" stroke="currentColor" viewbox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z" />
         </svg>
@@ -197,7 +197,7 @@
        <h3 class="font-display text-2xl text-[#3C5F68] mb-3">Emagrecimento Saudável</h3>
        <p class="text-[#3C5F68]/80 leading-relaxed">Perca peso de forma gradual e sustentável, sem dietas restritivas ou efeito sanfona.</p>
       </div>
-      <div class="card-hover bg-white p-8 rounded-3xl shadow-lg shadow-[#3C5F68]/10 border border-[#EFEADF]">
+      <div class="card-hover bg-white p-8 rounded-3xl shadow-lg shadow-[#3C5F68]/10 border border-gray-100">
        <div class="w-16 h-16 bg-[#72989B]/10 rounded-2xl flex items-center justify-center mb-6">
         <svg class="w-8 h-8 text-[#3C5F68]" fill="none" stroke="currentColor" viewbox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M13 10V3L4 14h7v7l9-11h-7z" />
         </svg>
@@ -205,7 +205,7 @@
        <h3 class="font-display text-2xl text-[#3C5F68] mb-3">Nutrição Esportiva</h3>
        <p class="text-[#3C5F68]/80 leading-relaxed">Otimize seu desempenho e recuperação com uma alimentação estratégica para seus objetivos.</p>
       </div>
-      <div class="card-hover bg-white p-8 rounded-3xl shadow-lg shadow-[#3C5F68]/10 border border-[#EFEADF]">
+      <div class="card-hover bg-white p-8 rounded-3xl shadow-lg shadow-[#3C5F68]/10 border border-gray-100">
        <div class="w-16 h-16 bg-[#72989B]/10 rounded-2xl flex items-center justify-center mb-6">
         <svg class="w-8 h-8 text-[#3C5F68]" fill="none" stroke="currentColor" viewbox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z" />
         </svg>
@@ -213,7 +213,7 @@
        <h3 class="font-display text-2xl text-[#3C5F68] mb-3">Nutrição Clínica</h3>
        <p class="text-[#3C5F68]/80 leading-relaxed">Tratamento nutricional para condições específicas como diabetes, hipertensão e intolerâncias.</p>
       </div>
-      <div class="card-hover bg-white p-8 rounded-3xl shadow-lg shadow-[#3C5F68]/10 border border-[#EFEADF]">
+      <div class="card-hover bg-white p-8 rounded-3xl shadow-lg shadow-[#3C5F68]/10 border border-gray-100">
        <div class="w-16 h-16 bg-[#72989B]/10 rounded-2xl flex items-center justify-center mb-6">
         <svg class="w-8 h-8 text-[#3C5F68]" fill="none" stroke="currentColor" viewbox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M14.828 14.828a4 4 0 01-5.656 0M9 10h.01M15 10h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
         </svg>
@@ -221,7 +221,7 @@
        <h3 class="font-display text-2xl text-[#3C5F68] mb-3">Comportamento Alimentar</h3>
        <p class="text-[#3C5F68]/80 leading-relaxed">Trabalhe sua relação emocional com a comida e desenvolva hábitos mais conscientes.</p>
       </div>
-      <div class="card-hover bg-white p-8 rounded-3xl shadow-lg shadow-[#3C5F68]/10 border border-[#EFEADF]">
+      <div class="card-hover bg-white p-8 rounded-3xl shadow-lg shadow-[#3C5F68]/10 border border-gray-100">
        <div class="w-16 h-16 bg-[#72989B]/10 rounded-2xl flex items-center justify-center mb-6">
         <svg class="w-8 h-8 text-[#3C5F68]" fill="none" stroke="currentColor" viewbox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857M7 20H2v-2a3 3 0 015.356-1.857M7 20v-2c0-.656.126-1.283.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0zm6 3a2 2 0 11-4 0 2 2 0 014 0zM7 10a2 2 0 11-4 0 2 2 0 014 0z" />
         </svg>
@@ -241,7 +241,7 @@
     </div>
     <div class="max-w-4xl mx-auto text-center relative z-10">
      <h2 id="cta-title" class="font-display text-4xl md:text-5xl lg:text-6xl text-white mb-6">Pronta para transformar sua relação com a comida?</h2>
-     <p class="text-[#EFEADF] text-lg md:text-xl mb-10 max-w-2xl mx-auto">Entre em contato pelo WhatsApp e agende sua consulta. Vamos juntas construir um caminho de saúde e bem-estar.</p>
+     <p class="text-white/90 text-lg md:text-xl mb-10 max-w-2xl mx-auto">Entre em contato pelo WhatsApp e agende sua consulta. Vamos juntas construir um caminho de saúde e bem-estar.</p>
      <a href="https://wa.me/5528992523178?text=Olá,%20gostaria%20de%20agendar%20uma%20consulta%20nutricional." target="_blank" rel="noopener noreferrer" class="btn-primary inline-flex items-center gap-3 bg-white text-[#3C5F68] px-10 py-5 rounded-full font-semibold text-lg shadow-2xl shadow-[#3C5F68]/30 hover:shadow-xl transition-all hover:scale-105">
       <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
         <path d="M12.04 2c-5.46 0-9.91 4.45-9.91 9.91 0 1.75.46 3.45 1.32 4.95L2.05 22l5.25-1.38c1.45.79 3.08 1.21 4.74 1.21 5.46 0 9.91-4.45 9.91-9.91 0-2.65-1.03-5.14-2.9-7.01A9.816 9.816 0 0012.04 2zm.01 1.67c2.2 0 4.26.86 5.82 2.42a8.225 8.225 0 012.41 5.83c0 4.54-3.7 8.23-8.24 8.23-1.48 0-2.93-.39-4.19-1.14l-.3-.17-3.12.82.83-3.04-.2-.32a8.188 8.188 0 01-1.26-4.38c0-4.54 3.7-8.23 8.24-8.23zM8.53 7.33c-.16 0-.43.06-.66.31-.22.25-.87.86-.87 2.07 0 1.22.89 2.39 1 2.56.14.17 1.76 2.67 4.25 3.73.59.27 1.05.42 1.41.53.59.19 1.13.16 1.56.1.48-.07 1.46-.6 1.67-1.18.21-.58.21-1.07.15-1.18-.05-.1-.22-.16-.47-.28-.25-.13-1.46-.72-1.69-.8-.23-.08-.37-.12-.56.12-.16.25-.64.8-.78.97-.15.17-.29.19-.53.07-.26-.13-1.06-.39-2-1.23-.74-.66-1.23-1.47-1.38-1.72-.12-.24-.01-.39.11-.5.11-.11.27-.29.37-.44.13-.14.17-.25.25-.41.08-.17.04-.31-.02-.43-.06-.11-.56-1.35-.77-1.84-.2-.48-.41-.42-.56-.43-.14 0-.3-.01-.47-.01z"/>
@@ -260,18 +260,18 @@
        </div><span class="font-display text-2xl text-white">Ana Gabriela Fonseca</span>
       </div>
       <div class="flex items-center gap-4">
-        <a href="https://www.instagram.com/nutri.anafonseca/" target="_blank" rel="noopener noreferrer" class="flex items-center gap-2 text-[#EFEADF] hover:text-white transition-colors">
+        <a href="https://www.instagram.com/nutri.anafonseca/" target="_blank" rel="noopener noreferrer" class="flex items-center gap-2 text-white/90 hover:text-white transition-colors">
          <svg class="w-5 h-5" viewbox="0 0 24 24" fill="currentColor"><path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073z" /> <path d="M12 6.865a5.135 5.135 0 110 10.27 5.135 5.135 0 010-10.27zm0 1.802a3.333 3.333 0 100 6.666 3.333 3.333 0 000-6.666zm5.338-3.205a1.2 1.2 0 110 2.4 1.2 1.2 0 010-2.4z" />
          </svg> @nutri.anafonseca 
         </a>
-        <span class="text-[#EFEADF]">|</span>
-        <a href="https://wa.me/5528992523178?text=Olá,%20gostaria%20de%20agendar%20uma%20consulta%20nutricional." target="_blank" rel="noopener noreferrer" class="flex items-center gap-2 text-[#EFEADF] hover:text-white transition-colors">
+        <span class="text-white/90">|</span>
+        <a href="https://wa.me/5528992523178?text=Olá,%20gostaria%20de%20agendar%20uma%20consulta%20nutricional." target="_blank" rel="noopener noreferrer" class="flex items-center gap-2 text-white/90 hover:text-white transition-colors">
          <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24">
            <path d="M12.04 2c-5.46 0-9.91 4.45-9.91 9.91 0 1.75.46 3.45 1.32 4.95L2.05 22l5.25-1.38c1.45.79 3.08 1.21 4.74 1.21 5.46 0 9.91-4.45 9.91-9.91 0-2.65-1.03-5.14-2.9-7.01A9.816 9.816 0 0012.04 2zm.01 1.67c2.2 0 4.26.86 5.82 2.42a8.225 8.225 0 012.41 5.83c0 4.54-3.7 8.23-8.24 8.23-1.48 0-2.93-.39-4.19-1.14l-.3-.17-3.12.82.83-3.04-.2-.32a8.188 8.188 0 01-1.26-4.38c0-4.54 3.7-8.23 8.24-8.23zM8.53 7.33c-.16 0-.43.06-.66.31-.22.25-.87.86-.87 2.07 0 1.22.89 2.39 1 2.56.14.17 1.76 2.67 4.25 3.73.59.27 1.05.42 1.41.53.59.19 1.13.16 1.56.1.48-.07 1.46-.6 1.67-1.18.21-.58.21-1.07.15-1.18-.05-.1-.22-.16-.47-.28-.25-.13-1.46-.72-1.69-.8-.23-.08-.37-.12-.56.12-.16.25-.64.8-.78.97-.15.17-.29.19-.53.07-.26-.13-1.06-.39-2-1.23-.74-.66-1.23-1.47-1.38-1.72-.12-.24-.01-.39.11-.5.11-.11.27-.29.37-.44.13-.14.17-.25.25-.41.08-.17.04-.31-.02-.43-.06-.11-.56-1.35-.77-1.84-.2-.48-.41-.42-.56-.43-.14 0-.3-.01-.47-.01z"/>
          </svg> WhatsApp
         </a>
       </div>
-      <p class="text-[#EFEADF]/80 text-sm">© 2024 Ana Gabriela Fonseca Nutricionista. Todos os direitos reservados.</p>
+      <p class="text-white/80 text-sm">© 2024 Ana Gabriela Fonseca Nutricionista. Todos os direitos reservados.</p>
      </div>
     </div>
    </footer>
@@ -286,7 +286,7 @@
       services_title: 'Áreas de Atuação',
       cta_title: 'Pronta para transformar sua relação com a comida?',
       cta_button: 'Agende sua Consulta',
-      background_color: '#EFEADF',
+      background_color: '#FFFFFF',
       surface_color: '#FFFFFF',
       text_color: '#3C5F68',
       primary_action_color: '#72989B',
@@ -309,7 +309,7 @@
       document.getElementById('cta-button').textContent = c.cta_button;
       
       // Apply colors
-      document.getElementById('hero-section').style.background = `linear-gradient(to bottom right, ${c.background_color}, ${adjustColor(c.primary_action_color, 0.1)}, ${c.background_color})`;
+      document.getElementById('hero-section').style.background = `linear-gradient(to bottom right, ${c.background_color}, ${adjustColor(c.primary_action_color, 0.05)}, ${c.background_color})`;
       document.getElementById('about-section').style.backgroundColor = c.background_color;
       document.getElementById('services-section').style.background = `linear-gradient(to bottom, ${c.background_color}, ${c.background_color})`;
       
