--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
   <style>@view-transition { navigation: auto; }</style>
   <script src="/_sdk/data_sdk.js" type="text/javascript"></script>
  </head>
- <body class="h-full font-body bg-white">
+ <body class="h-full font-body" style="background: linear-gradient(135deg, #72989B 0%, #3C5F68 100%); min-height: 100vh;">
   <div id="app-wrapper" class="w-full h-full overflow-auto"><!-- Hero Section -->
    <section id="hero-section" class="min-h-screen relative flex items-center justify-center leaf-pattern">
     <div class="absolute inset-0 bg-gradient-to-br from-white via-[#72989B]/5 to-white"></div><!-- Decorative Elements -->
@@ -122,9 +122,9 @@
        </div>
       </div>
      </div>
-     <p id="hero-subtitle" class="text-[#72989B] font-medium tracking-[0.3em] uppercase text-sm mb-4 opacity-0 animate-fade-in-up delay-100">Nutricionista</p>
-     <h1 id="hero-title" class="font-display text-6xl md:text-7xl lg:text-8xl font-medium text-[#3C5F68] mb-6 opacity-0 animate-fade-in-up delay-200">Ana Gabriela Fonseca</h1>
-     <p id="hero-tagline" class="text-xl md:text-2xl text-[#72989B] font-light max-w-2xl mx-auto mb-10 opacity-0 animate-fade-in-up delay-300">Transformando vidas através da alimentação consciente</p>
+     <p id="hero-subtitle" class="text-white font-medium tracking-[0.3em] uppercase text-sm mb-4 opacity-0 animate-fade-in-up delay-100">Nutricionista</p>
+     <h1 id="hero-title" class="font-display text-6xl md:text-7xl lg:text-8xl font-medium text-white mb-6 opacity-0 animate-fade-in-up delay-200">Ana Gabriela Fonseca</h1>
+     <p id="hero-tagline" class="text-xl md:text-2xl text-white font-light max-w-2xl mx-auto mb-10 opacity-0 animate-fade-in-up delay-300">Transformando vidas através da alimentação consciente</p>
      <div class="flex flex-col sm:flex-row gap-4 justify-center items-center opacity-0 animate-fade-in-up delay-400">
        <a href="https://www.instagram.com/nutri.anafonseca/" target="_blank" rel="noopener noreferrer" class="btn-primary inline-flex items-center gap-3 bg-gradient-to-r from-[#72989B] to-[#3C5F68] text-white px-8 py-4 rounded-full font-medium shadow-lg shadow-[#72989B]/25 hover:shadow-xl hover:shadow-[#72989B]/30">
          <svg class="w-5 h-5" viewbox="0 0 24 24" fill="currentColor"><path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z" />
@@ -132,29 +132,29 @@
        </a>
      </div>
      <div class="mt-16 opacity-0 animate-fade-in-up delay-500">
-      <svg class="w-6 h-10 mx-auto text-[#3C5F68] animate-bounce" fill="none" stroke="currentColor" viewbox="0 0 24 40"><rect x="6" y="1" width="12" height="22" rx="6" stroke-width="2" /> <circle cx="12" cy="8" r="2" fill="currentColor" />
+      <svg class="w-6 h-10 mx-auto text-white animate-bounce" fill="none" stroke="currentColor" viewbox="0 0 24 40"><rect x="6" y="1" width="12" height="22" rx="6" stroke-width="2" /> <circle cx="12" cy="8" r="2" fill="currentColor" />
       </svg>
      </div>
     </div>
    </section><!-- About Section -->
-   <section id="about-section" class="py-24 px-6 bg-white">
+   <section id="about-section" class="py-24 px-6" style="background: linear-gradient(135deg, #72989B 0%, #3C5F68 100%);">
     <div class="max-w-6xl mx-auto">
      <div class="grid md:grid-cols-2 gap-16 items-center">
       <div>
-        <span class="text-[#72989B] font-medium tracking-[0.2em] uppercase text-sm">Conheça</span>
-       <h2 id="about-title" class="font-display text-5xl md:text-6xl text-[#3C5F68] mt-2 mb-8">Sobre Mim</h2>
-       <div class="space-y-6 text-[#3C5F68] leading-relaxed">
+        <span class="text-white font-medium tracking-[0.2em] uppercase text-sm">Conheça</span>
+       <h2 id="about-title" class="font-display text-5xl md:text-6xl text-white mt-2 mb-8">Sobre Mim</h2>
+       <div class="space-y-6 text-white leading-relaxed">
         <p id="about-text">Sou nutricionista apaixonada por ajudar pessoas a construírem uma relação saudável e prazerosa com a alimentação. Acredito que comer bem vai muito além de seguir dietas restritivas — é sobre nutrir corpo e mente com consciência e equilíbrio.</p>
         <p>Minha abordagem é personalizada e humanizada, respeitando a individualidade, rotina e preferências de cada paciente. Juntos, construímos um plano alimentar que se encaixa na sua vida real.</p>
        </div>
        <div class="mt-10 flex flex-wrap gap-4">
-        <div class="flex items-center gap-2 bg-[#72989B]/10 px-4 py-2 rounded-full">
-         <svg class="w-5 h-5 text-[#3C5F68]" fill="none" stroke="currentColor" viewbox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
-         </svg><span class="text-[#3C5F68] text-sm font-medium">CRN Ativo</span>
+        <div class="flex items-center gap-2 bg-white/20 px-4 py-2 rounded-full">
+         <svg class="w-5 h-5 text-white" fill="none" stroke="currentColor" viewbox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
+         </svg><span class="text-white text-sm font-medium">CRN Ativo</span>
         </div>
-        <div class="flex items-center gap-2 bg-[#72989B]/10 px-4 py-2 rounded-full">
-         <svg class="w-5 h-5 text-[#3C5F68]" fill="none" stroke="currentColor" viewbox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z" />
-         </svg><span class="text-[#3C5F68] text-sm font-medium">Atendimento Humanizado</span>
+        <div class="flex items-center gap-2 bg-white/20 px-4 py-2 rounded-full">
+         <svg class="w-5 h-5 text-white" fill="none" stroke="currentColor" viewbox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z" />
+         </svg><span class="text-white text-sm font-medium">Atendimento Humanizado</span>
         </div>
        </div>
       </div>
@@ -174,14 +174,14 @@
      </div>
     </div>
    </section><!-- Services Section -->
-   <section id="services-section" class="py-24 px-6 bg-gradient-to-b from-white to-white">
+   <section id="services-section" class="py-24 px-6" style="background: linear-gradient(135deg, #72989B 0%, #3C5F68 100%);">
     <div class="max-w-6xl mx-auto">
      <div class="text-center mb-16">
-       <span class="text-[#72989B] font-medium tracking-[0.2em] uppercase text-sm">Especialidades</span>
-       <h2 id="services-title" class="font-display text-5xl md:text-6xl text-[#3C5F68] mt-2">Áreas de Atuação</h2>
+       <span class="text-white font-medium tracking-[0.2em] uppercase text-sm">Especialidades</span>
+       <h2 id="services-title" class="font-display text-5xl md:text-6xl text-white mt-2">Áreas de Atuação</h2>
      </div>
      <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
-      <div class="card-hover bg-white p-8 rounded-3xl shadow-lg shadow-[#3C5F68]/10 border border-gray-100">
+      <div class="card-hover p-8 rounded-3xl shadow-lg shadow-[#3C5F68]/10 border border-gray-100" style="background: rgba(255, 255, 255, 0.95);">
        <div class="w-16 h-16 bg-[#72989B]/10 rounded-2xl flex items-center justify-center mb-6">
         <svg class="w-8 h-8 text-[#3C5F68]" fill="none" stroke="currentColor" viewbox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M12 6v6m0 0v6m0-6h6m-6 0H6" />
         </svg>
