--- a/index.html
+++ b/index.html
@@ -96,16 +96,16 @@
   <style>@view-transition { navigation: auto; }</style>
   <script src="/_sdk/data_sdk.js" type="text/javascript"></script>
  </head>
- <body class="h-full font-body" style="background: linear-gradient(135deg, #72989B 0%, #3C5F68 100%); min-height: 100vh;">
+ <body class="h-full font-body" style="background: linear-gradient(135deg, #5a9fa0 0%, #2d4d54 50%, #1f3940 100%); min-height: 100vh;">
   <div id="app-wrapper" class="w-full h-full overflow-auto"><!-- Hero Section -->
-   <section id="hero-section" class="min-h-screen relative flex items-center justify-center leaf-pattern">
-    <div class="absolute inset-0 bg-gradient-to-br from-white via-[#72989B]/5 to-white"></div><!-- Decorative Elements -->
-    <div class="absolute top-20 left-10 opacity-20 animate-float">
-     <svg width="60" height="60" viewbox="0 0 60 60" fill="none"><path d="M30 5C30 5 45 20 45 35C45 50 30 55 30 55C30 55 15 50 15 35C15 20 30 5 30 5Z" stroke="#72989B" stroke-width="2" /> <path d="M30 15V45" stroke="#72989B" stroke-width="1.5" /> <path d="M30 25L22 32" stroke="#72989B" stroke-width="1" /> <path d="M30 32L38 39" stroke="#72989B" stroke-width="1" />
+   <section id="hero-section" class="min-h-screen relative flex items-center justify-center leaf-pattern" style="background: linear-gradient(135deg, #667d82 0%, #3d5a63 50%, #1a3a42 100%);">
+    <div class="absolute inset-0 bg-gradient-to-br from-white/5 via-transparent to-black/20"></div><!-- Decorative Elements -->
+    <div class="absolute top-20 left-10 opacity-30 animate-float">
+     <svg width="60" height="60" viewbox="0 0 60 60" fill="none"><path d="M30 5C30 5 45 20 45 35C45 50 30 55 30 55C30 55 15 50 15 35C15 20 30 5 30 5Z" stroke="#ffffff" stroke-width="2" /> <path d="M30 15V45" stroke="#ffffff" stroke-width="1.5" /> <path d="M30 25L22 32" stroke="#ffffff" stroke-width="1" /> <path d="M30 32L38 39" stroke="#ffffff" stroke-width="1" />
      </svg>
     </div>
-    <div class="absolute bottom-32 right-16 opacity-15 animate-float delay-200">
-     <svg width="80" height="80" viewbox="0 0 80 80" fill="none"><circle cx="40" cy="40" r="35" stroke="#72989B" stroke-width="1.5" stroke-dasharray="4 4" /> <path d="M40 15C40 15 55 30 55 45C55 55 45 60 40 60C35 60 25 55 25 45C25 30 40 15 40 15Z" fill="#72989B" fill-opacity="0.1" />
+    <div class="absolute bottom-32 right-16 opacity-20 animate-float delay-200">
+     <svg width="80" height="80" viewbox="0 0 80 80" fill="none"><circle cx="40" cy="40" r="35" stroke="#ffffff" stroke-width="1.5" stroke-dasharray="4 4" /> <path d="M40 15C40 15 55 30 55 45C55 55 45 60 40 60C35 60 25 55 25 45C25 30 40 15 40 15Z" fill="#ffffff" fill-opacity="0.15" />
      </svg>
     </div>
     <div class="relative z-10 text-center px-6 max-w-4xl mx-auto">
@@ -126,7 +126,7 @@
      <h1 id="hero-title" class="font-display text-6xl md:text-7xl lg:text-8xl font-medium text-white mb-6 opacity-0 animate-fade-in-up delay-200">Ana Gabriela Fonseca</h1>
      <p id="hero-tagline" class="text-xl md:text-2xl text-white font-light max-w-2xl mx-auto mb-10 opacity-0 animate-fade-in-up delay-300">Transformando vidas através da alimentação consciente</p>
      <div class="flex flex-col sm:flex-row gap-4 justify-center items-center opacity-0 animate-fade-in-up delay-400">
-       <a href="https://www.instagram.com/nutri.anafonseca/" target="_blank" rel="noopener noreferrer" class="btn-primary inline-flex items-center gap-3 bg-gradient-to-r from-[#72989B] to-[#3C5F68] text-white px-8 py-4 rounded-full font-medium shadow-lg shadow-[#72989B]/25 hover:shadow-xl hover:shadow-[#72989B]/30">
+       <a href="https://www.instagram.com/nutri.anafonseca/" target="_blank" rel="noopener noreferrer" class="btn-primary inline-flex items-center gap-3 bg-gradient-to-r from-[#7da9ae] to-[#4a7f87] text-white px-8 py-4 rounded-full font-medium shadow-lg shadow-black/20 hover:shadow-xl hover:shadow-black/30 hover:from-[#8bb8be] hover:to-[#5a8f97] transition-all">
          <svg class="w-5 h-5" viewbox="0 0 24 24" fill="currentColor"><path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z" />
          </svg> Siga no Instagram 
        </a>
@@ -137,7 +137,7 @@
      </div>
     </div>
    </section><!-- About Section -->
-   <section id="about-section" class="py-24 px-6" style="background: linear-gradient(135deg, #72989B 0%, #3C5F68 100%);">
+   <section id="about-section" class="py-24 px-6" style="background: linear-gradient(135deg, #5a8e94 0%, #3d5f66 100%);">
     <div class="max-w-6xl mx-auto">
      <div class="grid md:grid-cols-2 gap-16 items-center">
       <div>
@@ -148,11 +148,11 @@
         <p>Minha abordagem é personalizada e humanizada, respeitando a individualidade, rotina e preferências de cada paciente. Juntos, construímos um plano alimentar que se encaixa na sua vida real.</p>
        </div>
        <div class="mt-10 flex flex-wrap gap-4">
-        <div class="flex items-center gap-2 bg-white/20 px-4 py-2 rounded-full">
+        <div class="flex items-center gap-2 bg-white/15 backdrop-blur-sm px-4 py-2 rounded-full border border-white/20">
          <svg class="w-5 h-5 text-white" fill="none" stroke="currentColor" viewbox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
          </svg><span class="text-white text-sm font-medium">CRN Ativo</span>
         </div>
-        <div class="flex items-center gap-2 bg-white/20 px-4 py-2 rounded-full">
+        <div class="flex items-center gap-2 bg-white/15 backdrop-blur-sm px-4 py-2 rounded-full border border-white/20">
          <svg class="w-5 h-5 text-white" fill="none" stroke="currentColor" viewbox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z" />
          </svg><span class="text-white text-sm font-medium">Atendimento Humanizado</span>
         </div>
@@ -174,7 +174,7 @@
      </div>
     </div>
    </section><!-- Services Section -->
-   <section id="services-section" class="py-24 px-6" style="background: linear-gradient(135deg, #72989B 0%, #3C5F68 100%);">
+   <section id="services-section" class="py-24 px-6" style="background: linear-gradient(135deg, #5a8e94 0%, #3d5f66 100%);">
     <div class="max-w-6xl mx-auto">
      <div class="text-center mb-16">
        <span class="text-white font-medium tracking-[0.2em] uppercase text-sm">Especialidades</span>
@@ -232,8 +232,8 @@
      </div>
     </div>
    </section><!-- CTA Section -->
-   <section id="cta-section" class="py-24 px-6 bg-gradient-to-br from-[#72989B] via-[#72989B] to-[#3C5F68] relative overflow-hidden">
-    <div class="absolute inset-0 opacity-10">
+   <section id="cta-section" class="py-24 px-6 relative overflow-hidden" style="background: linear-gradient(135deg, #4a7f87 0%, #2d5560 100%);">
+    <div class="absolute inset-0 opacity-5">
      <svg class="w-full h-full" viewbox="0 0 100 100" preserveaspectratio="none"><pattern id="grid" width="10" height="10" patternunits="userSpaceOnUse">
        <circle cx="5" cy="5" r="1" fill="white" />
       </pattern> <rect width="100" height="100" fill="url(#grid)" />
@@ -242,7 +242,7 @@
     <div class="max-w-4xl mx-auto text-center relative z-10">
      <h2 id="cta-title" class="font-display text-4xl md:text-5xl lg:text-6xl text-white mb-6">Pronta para transformar sua relação com a comida?</h2>
      <p class="text-white/90 text-lg md:text-xl mb-10 max-w-2xl mx-auto">Entre em contato pelo WhatsApp e agende sua consulta. Vamos juntas construir um caminho de saúde e bem-estar.</p>
-     <a href="https://wa.me/5528992523178?text=Olá,%20gostaria%20de%20agendar%20uma%20consulta%20nutricional." target="_blank" rel="noopener noreferrer" class="btn-primary inline-flex items-center gap-3 bg-white text-[#3C5F68] px-10 py-5 rounded-full font-semibold text-lg shadow-2xl shadow-[#3C5F68]/30 hover:shadow-xl transition-all hover:scale-105">
+     <a href="https://wa.me/5528992523178?text=Olá,%20gostaria%20de%20agendar%20uma%20consulta%20nutricional." target="_blank" rel="noopener noreferrer" class="btn-primary inline-flex items-center gap-3 bg-gradient-to-r from-white to-gray-50 text-[#2d5560] px-10 py-5 rounded-full font-semibold text-lg shadow-2xl shadow-black/30 hover:shadow-xl transition-all hover:scale-105 hover:from-gray-100 hover:to-white">
       <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
         <path d="M12.04 2c-5.46 0-9.91 4.45-9.91 9.91 0 1.75.46 3.45 1.32 4.95L2.05 22l5.25-1.38c1.45.79 3.08 1.21 4.74 1.21 5.46 0 9.91-4.45 9.91-9.91 0-2.65-1.03-5.14-2.9-7.01A9.816 9.816 0 0012.04 2zm.01 1.67c2.2 0 4.26.86 5.82 2.42a8.225 8.225 0 012.41 5.83c0 4.54-3.7 8.23-8.24 8.23-1.48 0-2.93-.39-4.19-1.14l-.3-.17-3.12.82.83-3.04-.2-.32a8.188 8.188 0 01-1.26-4.38c0-4.54 3.7-8.23 8.24-8.23zM8.53 7.33c-.16 0-.43.06-.66.31-.22.25-.87.86-.87 2.07 0 1.22.89 2.39 1 2.56.14.17 1.76 2.67 4.25 3.73.59.27 1.05.42 1.41.53.59.19 1.13.16 1.56.1.48-.07 1.46-.6 1.67-1.18.21-.58.21-1.07.15-1.18-.05-.1-.22-.16-.47-.28-.25-.13-1.46-.72-1.69-.8-.23-.08-.37-.12-.56.12-.16.25-.64.8-.78.97-.15.17-.29.19-.53.07-.26-.13-1.06-.39-2-1.23-.74-.66-1.23-1.47-1.38-1.72-.12-.24-.01-.39.11-.5.11-.11.27-.29.37-.44.13-.14.17-.25.25-.41.08-.17.04-.31-.02-.43-.06-.11-.56-1.35-.77-1.84-.2-.48-.41-.42-.56-.43-.14 0-.3-.01-.47-.01z"/>
       </svg>
@@ -250,7 +250,7 @@
      </a>
     </div>
    </section><!-- Footer -->
-   <footer class="py-12 px-6" style="background-color: #3C5F68;">
+   <footer class="py-12 px-6" style="background: linear-gradient(135deg, #2d4d54 0%, #1a3940 100%);">
     <div class="max-w-6xl mx-auto">
      <div class="flex flex-col md:flex-row justify-between items-center gap-6">
       <div class="flex items-center gap-3">
