--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
        <div class="absolute -bottom-6 -left-6 w-32 h-32 bg-[#72989B] rounded-2xl -z-10"></div>
        <div class="absolute -top-6 -right-6 w-24 h-24 border-4 border-[#3C5F68] rounded-2xl -z-10"></div>
       </div>
-     </div>
+     </div> 
     </div>
    </section><!-- Services Section -->
    <section id="services-section" class="py-24 px-6" style="background: linear-gradient(135deg, #5a8e94 0%, #3d5f66 100%);">
@@ -271,7 +271,7 @@
          </svg> WhatsApp
         </a>
       </div>
-      <p class="text-white/80 text-sm">© 2024 Ana Gabriela Fonseca Nutricionista. Todos os direitos reservados.</p>
+      <p class="text-white/80 text-sm">© 2026 FONSECA CREATIVE STUDIO. Todos os direitos reservados.</p>
      </div>
     </div>
    </footer>
