--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
        <!-- Foto de perfil da Ana -->
        <div class="w-full h-full rounded-full bg-white flex items-center justify-center overflow-hidden">
         <img 
-          src="https://drive.google.com/thumbnail?id=1SH21J_mG95Q5C6WeLL6Iv8K-IvBIhk2Z&sz=w400" 
+          src="assets\IMG_4327.PNG" 
           alt="Ana Gabriela Fonseca - Nutricionista"
           class="w-full h-full object-cover"
           loading="lazy"
@@ -162,7 +162,7 @@
        <!-- Segunda foto da Ana -->
        <div class="aspect-[4/5] rounded-3xl overflow-hidden shadow-2xl shadow-[#3C5F68]/20">
         <img 
-          src="https://drive.google.com/thumbnail?id=1zgiwjXffqjNw-6BwgnPFi_b1q8AqNRIf&sz=w800" 
+          src="assets\IMG_4326.PNG" 
           alt="Ana Gabriela Fonseca trabalhando"
           class="w-full h-full object-cover"
           loading="lazy"
